# nlp-news-thai

./: .gitignore  ANALYSIS_THAIPBS.md  CLAUDE.md  README.md  pyproject.toml  scrape.py
notebooks/: build_dataset.ipynb
